--- a/src/Caption2Ass_PCR_pf/Caption2Ass_PCR_pf.vcxproj
+++ b/src/Caption2Ass_PCR_pf/Caption2Ass_PCR_pf.vcxproj
@@ -23,6 +23,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Caption2Ass_PCR</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <ProjectName>Caption2Ass_PCR_pf</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
