--- a/src/Caption2Ass_PCR_pf/Caption2Ass_PCR_pf.vcxproj
+++ b/src/Caption2Ass_PCR_pf/Caption2Ass_PCR_pf.vcxproj
@@ -71,22 +71,22 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <OutDir>..\$(Platform)\$(Configuration)\</OutDir>
-    <IntDir>..\$(Platform)\$(Configuration)\obj</IntDir>
+    <IntDir>..\$(Platform)\$(Configuration)\$(ProjectName) obj\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <OutDir>..\$(Platform)\$(Configuration)\</OutDir>
-    <IntDir>..\$(Platform)\$(Configuration)\obj</IntDir>
+    <IntDir>..\$(Platform)\$(Configuration)\$(ProjectName) obj\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>..\$(Platform)\$(Configuration)\</OutDir>
-    <IntDir>..\$(Platform)\$(Configuration)\obj</IntDir>
+    <IntDir>..\$(Platform)\$(Configuration)\$(ProjectName) obj\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>..\$(Platform)\$(Configuration)\</OutDir>
-    <IntDir>..\$(Platform)\$(Configuration)\obj</IntDir>
+    <IntDir>..\$(Platform)\$(Configuration)\$(ProjectName) obj\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
